@@ -58,7 +58,8 @@ multisite_builtin_views.update({
                                'host_notifications_enabled',
                                'opthostgroup',
                                'host_check_command',
-                               'opthost_contactgroup'],
+                               'opthost_contactgroup',
+                               'hostalias'],
               'sorters': [('site', False), ('site_host', False)],
               'title': _('All hosts'),
               'topic': _('Hosts')},
@@ -1035,6 +1036,7 @@ multisite_builtin_views.update({
                                  'host_notif_number',
                                  'host_staleness',
                                  'host_tags',
+                                 'hostalias',
                                 ],
                 'sorters': [],
                 'title': _('Host search'),
@@ -1114,6 +1116,7 @@ multisite_builtin_views.update({
                                 'svc_notif_number',
                                 'service_staleness',
                                 'host_tags',
+                                'hostalias',
                                 ],
                'sorters': [('site', False),
                            ('site_host', False),
