@@ -16,6 +16,7 @@
     * Speed-O-Meter: now measure only service checks. Host checks
       are omitted, since they do not really matter and make the
       results less useful when using CMC.
+    * Added host aliases filter to some views (host/service search)
     * FIX: Fixed encoding problem in webservice column output
     * FIX: Fix output format python for several numeric columns
     * FIX: Fixed searching hosts by aliases/adresses
